assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Karla:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700");

body {
  font-family: "Montserrat", sans-serif;
  font-weight: 300;
  font-size: 14px;
  color: #000;
  background-color: #eae7dc;
}

/* ----------------------------- Special paddings/ margins/ headings ----------------------------- */

.general-sub {
  padding-top: 10px;
  color: #fafafa;
}

.inline-block {
  display: inline-block;
}

.row-table {
  display: table;
}

.section-column {
  display: table-cell;
  padding: 0 30px 30px;
  float: none;
}

.section-heading {
  margin-bottom: 30px;
  margin-top: 30px;
  font-family: "Karla", sans-serif;
  color: #000;
}

/* ----------------------------- Logo ----------------------------- */

.container-fluid {
  margin: 0;
  padding: 0;
}

header {
  background-color: #d8c3a5;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
}

img {
  width: 30px;
  height: 30px;
}

/*--------------------- Banner ---------------------*/

.banner-image {
  background-image: url("../images/banner_image_dots.jpg");
  height: 60vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  -o-background-size: cover;
  position: relative;
}

.opaque-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.6);
}

.banner-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/*--------------------- Intro Section ---------------------*/

.section-intro {
  margin-top: 40px;
  margin-bottom: 40px;
  font-size: 20px;
  text-align: center;
}

/*--------------------- Jumbotron ---------------------*/

.jumbotron {
  background-color: transparent;
  color: #fafafa;
}

.jumbotron-header {
  color: #fafafa;
  font-size: 50px;
  font-family: "Karla", sans-serif;
}

.jumbotron-subheader {
  color: #fafafa;
  font-size: 30px;
  font-family: "montserrat", sans-serif;
}

/* ----------------------------- Buttons ----------------------------- */

.btn-primary {
  background-color: #e98074;
  width: 160px;
  height: 58px;
  border: none;
  margin-top: 5px;
  margin-bottom: 5px;
  display: block;
  text-align: left;
}

.btn-primary:hover,
.btn-primary:active,
.btn-primary:focus,
.btn-primary:active:focus {
  background-color: #d8c3a5;
}

.btn-icons {
  font-size: 20px;
  text-align: left;
}


/* ----------------------------- Map ----------------------------- */

div#map {
  min-height: 550px;
}

/* ----------------------------- Footer ----------------------------- */

footer {
  background-color: #000;
  text-align: center;
  margin-top: 40px;
}

.footer-body {
  color: #fafafa;
  font-size: 12px;
  padding-top: 10px;
}

.footer-icons {
  padding-top: 10px;
  font-size: 20px;
  color: #e98074;
}

